--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "ember-redux-helpers",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "template helpers for ember-redux.",
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "dispatch"
   ],
   "license": "MIT",
-  "author": "",
+  "author": "Thomas Chen",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
+  "repository": "https://github.com/foxnewsnetwork/ember-redux-helpers",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
