--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
-    "ember-one-way-input": "0.4.0",
+    "ember-one-way-controls": "1.1.2",
     "ember-redux": "1.10.0",
     "ember-redux-route-connect": "0.1.0",
     "ember-resolver": "^2.0.3",
